# picmyweb

./: Cargo.toml  LICENSE  README.md  websites.txt
src/: gui.rs  lib.rs  main.rs  screenshot.rs  url_handler.rs
